# SberTestTask

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_fastapi.sh
src/: settings.py
src/domain/: entities.py  repositories.py  services.py
src/fastapi/: app.py  dependencies.py  errors.py  models.py  routers.py
src/infrastructure/in_memory_database/: repositories.py
src/infrastructure/postgres/: database.py  models.py  repositories.py  setup.py
tests/: dependencies.py
tests/domain/: test_services.py
